--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
   <a href="/gol">Single thread Game of Life implementation</a>
-  <a href="/go-thread">Multithread Game of Life implementation.</a>
+  <a href="/gol-thread">Multithread Game of Life implementation.</a>
 </body>
 </html>
